--- a/resources/events/config.json
+++ b/resources/events/config.json
@@ -1,13 +1,21 @@
 {
 	"type": "Collection",
 	"properties": {
+		"userid": {
+			"name": "userid",
+			"type": "string",
+			"typeLabel": "string",
+			"required": false,
+			"id": "userid",
+			"order": 0
+		},
 		"eventTitle": {
 			"name": "eventTitle",
 			"type": "string",
 			"typeLabel": "string",
 			"required": false,
 			"id": "eventTitle",
-			"order": 0
+			"order": 1
 		},
 		"location": {
 			"name": "location",
@@ -15,7 +23,7 @@
 			"typeLabel": "object",
 			"required": false,
 			"id": "location",
-			"order": 1
+			"order": 2
 		},
 		"address1": {
 			"name": "address1",
@@ -23,7 +31,7 @@
 			"typeLabel": "string",
 			"required": false,
 			"id": "address1",
-			"order": 2
+			"order": 3
 		},
 		"address2": {
 			"name": "address2",
@@ -31,7 +39,7 @@
 			"typeLabel": "string",
 			"required": false,
 			"id": "address2",
-			"order": 3
+			"order": 4
 		},
 		"city": {
 			"name": "city",
@@ -39,7 +47,7 @@
 			"typeLabel": "string",
 			"required": false,
 			"id": "city",
-			"order": 4
+			"order": 5
 		},
 		"state": {
 			"name": "state",
@@ -47,7 +55,7 @@
 			"typeLabel": "string",
 			"required": false,
 			"id": "state",
-			"order": 5
+			"order": 6
 		},
 		"zip": {
 			"name": "zip",
@@ -55,7 +63,7 @@
 			"typeLabel": "string",
 			"required": false,
 			"id": "zip",
-			"order": 6
+			"order": 7
 		},
 		"startDate": {
 			"name": "startDate",
@@ -63,7 +71,7 @@
 			"typeLabel": "date",
 			"required": false,
 			"id": "startDate",
-			"order": 7
+			"order": 8
 		},
 		"endDate": {
 			"name": "endDate",
@@ -71,7 +79,7 @@
 			"typeLabel": "date",
 			"required": false,
 			"id": "endDate",
-			"order": 8
+			"order": 9
 		},
 		"image": {
 			"name": "image",
@@ -79,7 +87,7 @@
 			"typeLabel": "string",
 			"required": false,
 			"id": "image",
-			"order": 9
+			"order": 10
 		},
 		"eventTags": {
 			"name": "eventTags",
@@ -87,7 +95,7 @@
 			"typeLabel": "array",
 			"required": false,
 			"id": "eventTags",
-			"order": 10
+			"order": 11
 		},
 		"eventType": {
 			"name": "eventType",
@@ -95,7 +103,7 @@
 			"typeLabel": "array",
 			"required": false,
 			"id": "eventType",
-			"order": 11
+			"order": 12
 		},
 		"eventDescription": {
 			"name": "eventDescription",
@@ -103,7 +111,7 @@
 			"typeLabel": "string",
 			"required": false,
 			"id": "eventDescription",
-			"order": 12
+			"order": 13
 		},
 		"eventOrganizer": {
 			"name": "eventOrganizer",
@@ -111,7 +119,7 @@
 			"typeLabel": "string",
 			"required": false,
 			"id": "eventOrganizer",
-			"order": 13
+			"order": 14
 		},
 		"privacy": {
 			"name": "privacy",
@@ -119,7 +127,7 @@
 			"typeLabel": "array",
 			"required": false,
 			"id": "privacy",
-			"order": 14
+			"order": 15
 		}
 	}
 }
