--- a/resources/events/config.json
+++ b/resources/events/config.json
@@ -128,6 +128,14 @@
 			"required": false,
 			"id": "privacy",
 			"order": 15
+		},
+		"link": {
+			"name": "link",
+			"type": "string",
+			"typeLabel": "string",
+			"required": false,
+			"id": "link",
+			"order": 16
 		}
 	}
 }
